--- a/HTML_04-main/HTML_04-main/index.html
+++ b/HTML_04-main/HTML_04-main/index.html
@@ -9,7 +9,45 @@
 
 <body>
 
-    <!-- Dodaj tabele -->
-   
+    <p>Tabela z najciekawszymi dinozaurami</p>
+    <table style="border: 1px solid #000000">
+        <thead>
+            <tr>
+                <th rowspan="2" style="border: 1px solid #000000">Nazwa</th>
+                <th rowspan="2" style="border: 1px solid #000000">Odkrycie</th>
+                <th colspan="2" style="border: 1px solid #000000">Rozmiar</th>
+            </tr>
+            <tr>
+                <th style="border: 1px solid #000000">Długość</th>
+                <th style="border: 1px solid #000000">Masa</th>
+
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td style="border: 1px solid #000000">Stegosaurus</td>
+                <td style="border: 1px solid #000000">1877</td>
+                <td style="border: 1px solid #000000">9 m</td>
+                <td style="border: 1px solid #000000">4.5 t</td>
+            </tr>
+            <tr>
+                <td style="border: 1px solid #000000">Apatosaurus</td>
+                <td style="border: 1px solid #000000">1877</td>
+                <td style="border: 1px solid #000000">25 m</td>
+                <td style="border: 1px solid #000000">12 t</td>
+            </tr>
+            <tr>
+                <td style="border: 1px solid #000000">Tyrranosaurus</td>
+                <td style="border: 1px solid #000000">1925</td>
+                <td style="border: 1px solid #000000">15 m</td>
+                <td style="border: 1px solid #000000">7 t</td>
+            </tr>
+            <tr>
+                <td style="border: 1px solid #000000; font-weight: bold;">Suma</td>
+                <td colspan="3" style="border: 1px solid #000000">3 dinozaury</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
+
 </html>
