adding value to form action

--- a/HTML_05-main/index.html
+++ b/HTML_05-main/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Rezerwacja</h1>
-    <form action="" method="get" name="reservation-form">
+    <form action="/" method="get" name="reservation-form">
         <fieldset>
             <legend>Dane osobowe</legend>
             
