added required field

--- a/HTML_06-main/index.html
+++ b/HTML_06-main/index.html
@@ -100,7 +100,7 @@
             <label for="business-travel-yes">Tak</label>
 
             <!-- Domyślnie zaznaczone -->
-            <input id="business-travel-no" type="radio" name="businessTravel" value="no" checked/>
+            <input id="business-travel-no" type="radio" name="businessTravel" value="no" required checked/>
             <label for="business-travel-no">Nie</label>
         </fieldset>
 
